--- a/Cluster_Analysis_Task.ipynb
+++ b/Cluster_Analysis_Task.ipynb
@@ -8,10 +8,10 @@
       "collapsed_sections": [
         "6sPVYT0Q2Rds",
         "26zZJQcN2eBl",
-        "NOIs6NhL2gC8",
         "FO2B5h0l2uxY",
         "JIiP2-ONAq2k",
         "tdAu3XzM_LTa",
+        "MTuHScq7FOfx",
         "EAk7-o0YXf4x",
         "aFfbMv0aNdiP",
         "wE6rwqPfCqqP",
@@ -30,9 +30,10 @@
         "aMiSzoHnXPvH",
         "MrwmO0PpXPvL",
         "uAvdOL7NXPvj",
-        "FBh7lEn3hdBL"
+        "FBh7lEn3hdBL",
+        "qbm-PImVfTMH"
       ],
-      "authorship_tag": "ABX9TyMEGGkaPGBldPlj9anoV16n",
+      "authorship_tag": "ABX9TyPal7ATLB2vAJymtXc51bKr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +77,7 @@
       },
       "source": [
         "\n",
-        "Dataset ini merupakan data pelanggan mall diperoleh dari \"*Mall Customer Segmentation Data*”. Data set cust Marketing yang digunakan memiliki 5 atribut dan 200 objek data. Berikut adalah penjelasan informasi atribut:"
+        "Dataset ini merupakan data pelanggan mall diperoleh dari *Mall Customer Segmentation Data*. Data set cust Mall yang digunakan memiliki 5 atribut dan 200 objek data. Berikut adalah penjelasan informasi atribut:"
       ]
     },
     {
@@ -593,7 +594,7 @@
         "outputId": "8abd8e58-83ca-4201-d326-c9c5583ee7a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 542
         }
       },
       "source": [
@@ -681,7 +682,7 @@
         "outputId": "dd789719-0849-4f4c-df83-86df67d895da",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 542
         }
       },
       "source": [
@@ -769,7 +770,7 @@
         "outputId": "7d3c4ad2-441c-49a8-f2e5-e3bebd3b3da5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 542
         }
       },
       "source": [
@@ -847,7 +848,7 @@
         "id": "3eeLCJtrywj8"
       },
       "source": [
-        "Dari visualisasi data diatas kita dapat melihat bahwa atribut gender terdistribusi secara merata baik *Female* maupun *Male* . Untuk mengurangi kesalahan pemodelan cluster atribut `Gender` akan di drop.\n"
+        "Dari visualisasi data diatas kita dapat melihat bahwa atribut gender terdistribusi secara merata baik *Female* maupun *Male*."
       ]
     },
     {
@@ -866,7 +867,7 @@
         "outputId": "b0b9315b-4b73-4116-f9b0-68ed58179a12",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 223
         }
       },
       "source": [
@@ -978,7 +979,7 @@
         "outputId": "49d9e9b7-03e5-4562-bcb4-513eb0fdc50b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 423
         }
       },
       "source": [
@@ -1083,7 +1084,7 @@
         "outputId": "8e42f861-0aff-4e40-cc15-453da5258f4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 423
         }
       },
       "source": [
@@ -1188,7 +1189,7 @@
         "outputId": "ce79e1fe-866d-4e0a-8d03-7beec5285a1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 423
         }
       },
       "source": [
@@ -4020,7 +4021,7 @@
         "outputId": "fa3e503d-47a8-43aa-bae8-78033d68b179",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 542
+          "height": 0
         }
       },
       "source": [
@@ -4428,7 +4429,7 @@
         "id": "wMuPF890dc2F"
       },
       "source": [
-        "Berdasarkan hasil klasterisasi dengan menggunakan K-Means, didapatkan $6$ buah klaster dengan setiap klaster menunjukan karakteristik sebagai berikut:\n",
+        "Berdasarkan hasil klasterisasi dengan menggunakan K-Means, didapatkan **6** buah klaster dengan setiap klaster menunjukan karakteristik sebagai berikut:\n",
         "\n",
         "**Cluster 0**: Terdapat 45 objek data yang termasuk dalam klaster ini. Mayoritas pelanggan pada klaster ini berjenis kelamin wanita. Rentang usia pelanggan pada klaster ini adalah 43-70 tahun. Rentang pendapatan pertaun pelanggan pada klaster ini adalah 3800-79000 dollar. Spending Score pelanggan pada klaster ini berada pada rentang 35-60. Sehingga klaster ini dapat disimpulkan memiliki karakteristik sebagai berikut:\n",
         "\n",
